added a background to body

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@
     padding: 0;
 }
 
+body {
+    background-image: url(../img/metalslug.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 .done {
     text-decoration: line-through;
 }
